# smaht-metadata-generator

./: .gitignore  README.md  pyproject.toml
example_inputs/: SMAHT001_collaborator_short_read_stripped.tsv  filtered_rna_watchmaker.tsv  tissue_uberon_identifiers.tsv
files/: gcc_automated_submission_example_v1.4.0.xlsx  overview_guidelines.xlsx  tissue_uberon_identifiers.tsv
input_examples/: SMAHT022_collaborator_short_read_stripped.tsv  donor_info.tsv  filtered_long_read.tsv  tissue_uberon_identifiers.tsv  trimmed_codec.tsv
scripts/: generate_aligned_reads_sheet.py  generate_codec_metadata.py  generate_fileset_sheet.py  generate_metadata.py  generate_sequencing_sheet.py  generate_unaligned_reads_sheet.py
src/metagen/: cli.py  generate_metadata.py  generate_unaligned_reads_sheet.py
utils/: 0A_strip_cram_and_bam_paths.py
