[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smaht-metadata-generator"
version = "0.1.0"
description = "Tool for generating standardized metadata sheets for SMaHT sequencing projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pandas>=1.3",
    "openpyxl>=3.0",
]

[project.scripts]
metagen = "metagen.cli:cli"  # This creates the 'metagen' command